<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="Home" />
    <item
        android:id="@+id/discoverView"
        android:enabled="true"
        android:icon="@drawable/ic_compass"
        android:title="Discover" />
    <item
        android:id="@+id/libraryFragment"
        android:enabled="true"
        android:icon="@drawable/ic_book"
        android:title="Library" />
    <item
        android:id="@+id/chatFragment"
        android:enabled="true"
        android:icon="@drawable/ic_chat_bubble"
        android:title="Chat" />
    <item
        android:id="@+id/cartView"
        android:enabled="true"
        android:icon="@drawable/ic_shopping_bag"
        android:title="Cart" />
</menu>