...
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/purchase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        tools:listitem="@layout/discovery_item" />

    <Button
...
